--- a/src/scss/components/_product-hero--new.scss
+++ b/src/scss/components/_product-hero--new.scss
@@ -27,9 +27,23 @@ form.cart {
     margin-top: 0;
     width: 100%;
     text-overflow: ellipsis;
-
     &:hover {
       cursor: pointer;
+    }
+  }
+
+  .variations .label {
+    margin-bottom: 1em;
+  }
+
+  .variations {
+    label {
+      text-transform: uppercase;
+      font-weight: 400 !important;
+
+      abbr {
+        font-weight: bold;
+      }
     }
   }
 
@@ -85,5 +99,31 @@ form.cart {
 
   &__pricelabel {
     margin: 0;
+  }
+
+  &__select-container {
+    position: relative;
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      right: 1em;
+      top: 50%;
+      border-top: 0.5em solid $primary;
+      border-right: 0.5em solid transparent;
+      border-bottom: 0.5em solid transparent;
+      border-left: 0.5em solid transparent;
+      transform: translateY(-0.25em);
+    }
+
+    &.selected {
+      select {
+        padding-right: 2.3em;
+      }
+      &::after {
+        border-top: 0.5em solid rgba($true-black, 0.25);
+      }
+    }
   }
 }
