gut account pages

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,6 +56,6 @@
 @import 'pages/cart';
 @import 'pages/404';
 @import 'pages/product-rec';
-@import 'account/account';
+@import 'pages/dashboard';
 
 @import 'global/IE';
