--- a/src/scss/pages/_my-account.scss
+++ b/src/scss/pages/_my-account.scss
@@ -112,16 +112,23 @@
   &--main__liner,
   &--sidebar__liner {
     border-radius: 0.33em;
+    ul {
+      @include unstyle-list();
+    }
+  }
+
+  &--sidebar__liner {
+    li a {
+      box-shadow: none;
+    }
   }
   &--main__liner {
     .my-dashboard {
       background: $true-white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       padding: 2em;
       font-size: 1.1em;
       margin: 0 0 1em 0;
       border-radius: 0.33em;
-      transition: box-shadow 0.5s ease;
       &:nth-child(2) {
         display: flex;
         justify-content: flex-start;
@@ -148,9 +155,6 @@
           font-weight: 500;
         }
       }
-      &:hover {
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-      }
     }
   }
 
@@ -163,23 +167,6 @@
       ul {
         position: relative;
         z-index: 2;
-      }
-      li {
-        transition: box-shadow 0.5s ease;
-        a {
-          padding: 0.5em;
-          background: white;
-          border-radius: 0.33em;
-          display: flex;
-          justify-content: center;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        &:hover {
-          box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-          a {
-            color: $primary;
-          }
-        }
       }
     }
 
