account pages collateral

--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -2,6 +2,10 @@
   @extend .k-block--md;
   background: $bg-gray;
 
+  .k-inner {
+    @include clearfix();
+  }
+
   .woocommerce-MyAccount-navigation {
     margin-bottom: 2em;
   }
