--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -76,6 +76,67 @@
   .woocommerce-Button {
     @extend .k-button;
     @extend .k-button--primary;
-    text-transform: uppercase;
+  }
+}
+
+#mag-overwrite-woo {
+  .woocommerce-ResetPassword {
+    .woocommerce-form-row {
+      width: 100%;
+    }
+
+    input[type='text'] {
+      width: 100%;
+    }
+
+    .woocommerce-Button {
+      background: $primary !important;
+      appearance: none !important;
+      display: block !important;
+      color: $true-white !important;
+      padding: 1.25em 1.15em !important;
+      border-radius: 0.4em !important;
+      text-align: center !important;
+      border: 1px solid !important;
+      font-family: $body-font;
+      font-weight: 400;
+      transition: background 1s $ease-out-circ, color 1s $ease-out-circ,
+        border-color 1s $ease-out-circ;
+    }
+  }
+}
+
+.woocommerce-form-login {
+  border: none !important;
+
+  .woocommerce-button {
+    background: $primary !important;
+    appearance: none !important;
+    display: block !important;
+    color: $true-white !important;
+    padding: 1.25em 1.15em !important;
+    border-radius: 0.4em !important;
+    text-align: center !important;
+    border: 1px solid !important;
+    font-family: $body-font;
+    font-weight: 400;
+    transition: background 1s $ease-out-circ, color 1s $ease-out-circ,
+      border-color 1s $ease-out-circ;
+  }
+}
+
+.woocommerce-account {
+  .woocommerce-notices-wrapper {
+    position: relative;
+    z-index: 100;
+  }
+}
+
+@media (min-width: $bp-lg) {
+  .woocommerce-account #mag-overwrite-woo {
+  }
+
+  .woocommerce-ResetPassword {
+    width: 50%;
   }
 }
