home hero video, lazy loading, search modal fixes

--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -93,9 +93,8 @@
     font-family: $heading-font;
     font-size: 200%;
 
-    &:focus {
+    &.active {
       outline: none;
-
       & + label {
         transform: translateY(-100%);
       }
