--- a/src/scss/components/_product-hero--new.scss
+++ b/src/scss/components/_product-hero--new.scss
@@ -95,6 +95,11 @@ form.cart {
     label {
       margin-bottom: 1em;
     }
+
+    button[type='submit'] {
+      font-weight: 400;
+      text-transform: capitalize;
+    }
   }
 
   &__pricelabel {
