--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -88,6 +88,7 @@
     flex-flow: row-reverse nowrap;
     align-items: center;
     justify-content: center;
+    font-size: 80%;
 
     ul {
       @include unstyle-list();
