--- a/src/scss/pages/_landing-pages.scss
+++ b/src/scss/pages/_landing-pages.scss
@@ -42,6 +42,8 @@
 .k-promoslider{padding-bottom:10px !important;}
 }
 
+.new-boxes-27{width:48%; margin:1% 1%; text-align:left; background-color:#f5f5f5; box-sizing:border-box; padding:15px 20px; font-family:GT America,sans-serif; font-size:14px; line-height:24px;}
+.new-boxes-27-title{font-family:Recoleta Regular,serif; font-size:25px; line-height:25px; padding-bottom:15px;}
 
 @media only screen and (max-width:768px){
 #banner-lp{padding:50px 0% 50px 0%;
@@ -79,4 +81,7 @@
 .simbol-qa-pos{width:10%; font-size:30px; }
 .simbol-qa-neg{width:10%; font-size:30px; }
 .box-content-qa{font-size:14px; line-height:16px; width:100%;}
+
+.new-boxes-27{width:100%; margin:1% 0%; padding:15px 15px; }
+.new-boxes-27-title{font-size:22px; line-height:23px;}
 }
